--- a/portfolio.html
+++ b/portfolio.html
@@ -93,14 +93,21 @@
           <ul class="portfolio-list list">
             <li class="portfolio-list-item">
               <a class="portfolio-link-img link" href="">
-                <img
-                  src="./images/project1.jpg"
-                  width="370"
-                  height="404"
-                  alt="Пример постера"
-                  class="portfolio-list-item-img"
-                />
-                <div class="portfolio-list-container link">
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/project1.jpg"
+                    width="370"
+                    height="404"
+                    alt="Пример постера"
+                    class="portfolio-list-item-img"
+                  />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="portfolio-list-container">
                   <h2 class="portfolio-list-title">Технокряк</h2>
                   <p class="portfolio-list-text">Веб-сайт</p>
                 </div>
@@ -108,138 +115,177 @@
             </li>
             <li class="portfolio-list-item">
               <a class="portfolio-link-img link" href="">
-                <img
-                  src="./images/project2.jpg"
-                  width="370"
-                  height="404"
-                  alt="Пример постера"
-                  class="portfolio-list-item-img"
-                />
-                <div class="portfolio-list-container">
-                  <h2 class="portfolio-list-title">
-                    Постер <span lang="en">New Orlean vs Golden Star</span>
-                  </h2>
-                  <p class="portfolio-list-text">Дизайн</p>
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/project1.jpg"
+                    width="370"
+                    height="404"
+                    alt="Пример постера"
+                    class="portfolio-list-item-img"
+                  />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
                 </div>
-              </a>
-            </li>
-            <li class="portfolio-list-item">
-              <a class="portfolio-link-img link" href="">
-                <img
-                  src="./images/project3.jpg"
-                  width="370"
-                  height="404"
-                  alt="Логотип приложения"
-                  class="portfolio-list-item-img"
-                />
                 <div class="portfolio-list-container">
-                  <h2 class="portfolio-list-title">
-                    Ресторан <span lang="en">Seafood</span>
-                  </h2>
-                  <p class="portfolio-list-text">Приложение</p>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio-list-item">
-              <a class="portfolio-link-img link" href="">
-                <img
-                  src="./images/project4.jpg"
-                  width="370"
-                  height="404"
-                  alt="Наушники"
-                  class="portfolio-list-item-img"
-                />
-
-                <div class="portfolio-list-container">
-                  <h2 class="portfolio-list-title">
-                    Проект <span lang="en">Prime</span>
-                  </h2>
-                  <p class="portfolio-list-text">Маркетинг</p>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio-list-item">
-              <a class="portfolio-link-img link" href="">
-                <img
-                  src="./images/project5.jpg"
-                  width="370"
-                  height="404"
-                  alt="Две коробки"
-                  class="portfolio-list-item-img"
-                />
-                <div class="portfolio-list-container">
-                  <h2 class="portfolio-list-title">
-                    Проект <span lang="en">Boxes</span>
-                  </h2>
-                  <p class="portfolio-list-text">Приложение</p>
-                </div>
-              </a>
-            </li>
-            <li class="portfolio-list-item">
-              <a class="portfolio-link-img link" href="">
-                <img
-                  src="./images/project6.jpg"
-                  width="370"
-                  height="404"
-                  alt="Изображение веб-сайта на мониторе"
-                  class="portfolio-list-item-img"
-                />
-                <div class="portfolio-list-container">
-                  <h2 class="portfolio-list-title">
-                    <span lang="en">Inspiration has no Borders</span>
-                  </h2>
+                  <h2 class="portfolio-list-title">Технокряк</h2>
                   <p class="portfolio-list-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="portfolio-list-item">
               <a class="portfolio-link-img link" href="">
-                <img
-                  src="./images/project7.jpg"
-                  width="370"
-                  height="404"
-                  alt="Журнал"
-                  class="portfolio-list-item-img"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/project1.jpg"
+                    width="370"
+                    height="404"
+                    alt="Пример постера"
+                    class="portfolio-list-item-img"
+                  />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-list-container">
-                  <h2 class="portfolio-list-title">
-                    Издание <span lang="en">Limited Edition</span>
-                  </h2>
-                  <p class="portfolio-list-text">Дизайн</p>
+                  <h2 class="portfolio-list-title">Технокряк</h2>
+                  <p class="portfolio-list-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="portfolio-list-item">
               <a class="portfolio-link-img link" href="">
-                <img
-                  src="./images/project8.jpg"
-                  width="370"
-                  height="404"
-                  alt="Этикетка"
-                  class="portfolio-list-item-img"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/project1.jpg"
+                    width="370"
+                    height="404"
+                    alt="Пример постера"
+                    class="portfolio-list-item-img"
+                  />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-list-container">
-                  <h2 class="portfolio-list-title">
-                    Проект <span lang="en">LAB</span>
-                  </h2>
-                  <p class="portfolio-list-text">Маркетинг</p>
+                  <h2 class="portfolio-list-title">Технокряк</h2>
+                  <p class="portfolio-list-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <li class="portfolio-list-item">
               <a class="portfolio-link-img link" href="">
-                <img
-                  src="./images/project9.jpg"
-                  width="370"
-                  height="404"
-                  alt="Пример приложения на ноутбуке"
-                  class="portfolio-list-item-img"
-                />
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/project1.jpg"
+                    width="370"
+                    height="404"
+                    alt="Пример постера"
+                    class="portfolio-list-item-img"
+                  />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="portfolio-list-container">
-                  <h2 class="portfolio-list-title">
-                    <span lang="en">Growing Business</span>
-                  </h2>
-                  <p class="portfolio-list-text">Приложение</p>
+                  <h2 class="portfolio-list-title">Технокряк</h2>
+                  <p class="portfolio-list-text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-list-item">
+              <a class="portfolio-link-img link" href="">
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/project1.jpg"
+                    width="370"
+                    height="404"
+                    alt="Пример постера"
+                    class="portfolio-list-item-img"
+                  />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="portfolio-list-container">
+                  <h2 class="portfolio-list-title">Технокряк</h2>
+                  <p class="portfolio-list-text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-list-item">
+              <a class="portfolio-link-img link" href="">
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/project1.jpg"
+                    width="370"
+                    height="404"
+                    alt="Пример постера"
+                    class="portfolio-list-item-img"
+                  />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="portfolio-list-container">
+                  <h2 class="portfolio-list-title">Технокряк</h2>
+                  <p class="portfolio-list-text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-list-item">
+              <a class="portfolio-link-img link" href="">
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/project1.jpg"
+                    width="370"
+                    height="404"
+                    alt="Пример постера"
+                    class="portfolio-list-item-img"
+                  />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="portfolio-list-container">
+                  <h2 class="portfolio-list-title">Технокряк</h2>
+                  <p class="portfolio-list-text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-list-item">
+              <a class="portfolio-link-img link" href="">
+                <div class="portfolio-overlay">
+                  <img
+                    src="./images/project1.jpg"
+                    width="370"
+                    height="404"
+                    alt="Пример постера"
+                    class="portfolio-list-item-img"
+                  />
+                  <p class="overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="portfolio-list-container">
+                  <h2 class="portfolio-list-title">Технокряк</h2>
+                  <p class="portfolio-list-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
