--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <ul class="navigation-list list">
             <li class="navigation-list-item">
-              <a href="./index.html" class="navigation-link link active"
+              <a href="./index.html" class="navigation-link link active "
                 >Студия</a
               >
             </li>
@@ -58,7 +58,7 @@
           <li cclass="contact-telephon">
             <a href="tel:+380961111111" class="contact-telephon-link link">
               <svg class="mail-icon" width="10" height="16">
-                <use href="./images/sprite.svg#smartphone"></use>
+                <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -74,13 +74,13 @@
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button type="button" class="modal-button">Заказать услугу</button>
+          <button type="button" class="modal-button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <!-- description section -->
       <section class="description section">
         <div class="container">
-          <h2 class="description-title">Особенности</h2>
+          <h2 class="visually-hidden">Особенности</h2>
           <ul class="description-list list">
             <li class="description-list-item">
               <div class="description-image">
@@ -121,7 +121,7 @@
             <li class="description-list-item">
               <div class="description-image">
                 <svg class="description-icon" width="70" height="70">
-                  <use href="./images/sprite.svg#icon-astronaut-1-1"></use>
+                  <use href="./images/sprite.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="description-second-title">Современные технологии</h3>
@@ -139,21 +139,34 @@
           <h2 class="about-title">Чем мы занимаемся</h2>
           <ul class="about-list list">
             <li class="about-list-photo">
-              <img
+              <a href="" class="about-link">
+              <img class="about-img"
                 src="./images/box1.jpg"
                 width="370"
                 alt="Десктопные приложения"
               />
+              
+              <h3 class="about-overlay">Десктопные приложения</h3>
+              </a>
             </li>
             <li class="about-list-photo">
-              <img
+              <a href="" class="about-link"></a>
+              <img 
+                class="about-img"
                 src="./images/box2.jpg"
                 width="370"
                 alt="Мобильные приложения"
               />
+
+              <h3 class="about-overlay">Мобильные приложения</h3>
+              </a>
             </li>
             <li class="about-list-photo">
-              <img src="./images/box3.jpg" width="370" alt="Вебдизайн" />
+              <a href="" class="about-link"></a>
+              <img class="about-img" src="./images/box3.jpg" width="370" alt="Вебдизайн" />
+             
+              <h3 class="about-overlay">Дизайнерские решения</h3>
+              </a>
             </li>
           </ul>
         </div>
@@ -480,5 +493,80 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop " data-modal>
+<div class="modal">
+<button type="button" class="modal-close-btn" data-modal-close>
+  <svg class="modal-close-icon" width="18" height="18">
+    <use href="./images/sprite.svg#close-icon">
+    </use>
+  </svg>
+</button>
+
+<form class="contact-form">
+  <p class="contact-form-main-title">Оставьте свои данные, мы вам перезвоним</p>
+<label class="contact-form-field">
+ <span class="contact-form-title">Имя</span> 
+ <span class="contact-form-input-wrapper">
+<input name="user_name" class="contact-form-input" type="text">
+<svg class="user-name-icon" width="18" height="18">
+  <use href="./images/sprite.svg#icon-person-form">
+
+  </use>
+</svg>
+ </span>
+</label>
+<label class="contact-form-field">
+ <span class="contact-form">Телефон</span> 
+ <span class="contact-form-input-wrapper">
+<input name="user_phone" class="contact-form-input" type="tel">
+<svg class="user-name-icon" width="18" height="18">
+  <use href="./images/sprite.svg#icon-phone-contact-form">
+
+  </use>
+</svg>
+ </span>
+</label>
+
+<label class="contact-form-field">
+<span class="contact-form">Почта</span> 
+<span class="contact-form-input-wrapper">
+<input name="email" class="contact-form-input" type="email">
+<svg class="user-name-icon" width="18" height="18">
+  <use href="./images/sprite.svg#icon-mail-contact">
+
+  </use>
+</svg>
+</span>
+</label>
+
+
+
+
+
+
+
+
+
+
+
+<label>
+ <span class="contact-form">Комментарий</span>
+<textarea name="user_message"  class="contact-form-message" placeholder="Введите текст"></textarea>
+
+</label>
+<div class="contact-form-checkbox-wrapper">
+<input name="accept-policy" type="checkbox" class="contact-form-checkbox visually-hidden" id="policy-checkbox" required >
+<label for="policy-checkbox" class="contact-form-checkbox-label">
+
+Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a> 
+
+</label>
+</div>
+
+<button type="submit" class="contact-form-btn">Отправить</button>
+</form>
+</div>
+    </div>
+     <script src="./js/modal.js"></script>
   </body>
 </html>
