--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
           <li cclass="contact-telephon">
             <a href="tel:+380961111111" class="contact-telephon-link link">
               <svg class="mail-icon" width="10" height="16">
-                <use href="./images/sprite.svg#smartphone"></use>
+                <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -68,7 +68,7 @@
       <!-- Section filter-portfolio -->
       <section class="menu-portfolio">
         <div class="container">
-          <h1 class="menu-portfolio-title">Портфолио</h1>
+          <h1 class="visually-hidden">Портфолио</h1>
           <ul class="portfolio-filter-list list">
             <li class="portfolio-list-btn">
               <button type="button" class="filter-btn active-filter-btn">
